syntax = "proto3";

message Empty {}

enum Side {
  BID = 0;
  ASK = 1;
}

message CreateOrderRequest {
  int64 amount = 0;
  int64 price = 1;
  string market = 2;
  optional string timeinforce = 3;
  Side side = 4;
}

message CreateOrderResponse {
  string orderId = 0;
}

message WatchMarketRequest {
  string market = 0;
}

message WatchMarketResponse {
  int64 base_amount = 0;
  int64 counter_amount = 1;
  Side side = 2;
}

message HealthCheckResponse {
  string engine_status = 0;
  string relayer_status = 1;
}

service Broker {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc WatchMarket (WatchMarketRequest) returns (stream WatchMarketResponse);
  rpc HealthCheck (Empty) returns (HealthCheckResponse);
}
