syntax = "proto3";

message WatchMarketRequest {
  string market = 0;
}

message WatchMarketResponse {

  EventType type = 0;
  MarketEvent market_event = 1;

  enum EventType {

      DEL = 1;
      PUT = 2;
  }
}

message MarketEvent {
  string orderId = 0;
  int64 base_amount = 1;
  int64 counter_amount = 2;
  Side side = 3;
}



service OrderBook {
  rpc WatchMarket (WatchMarketRequest) returns (stream WatchMarketResponse);
}
